--- a/src/index.html
+++ b/src/index.html
@@ -63,10 +63,12 @@
         </footer>
     </section>
     <footer class="info">
-        <p>Template creado por <a href="http://sindresorhus.com">Sindre Sorhus</a></p>
+        <p>Template creado por <a href="http://sindresorhus.com" target="_blank">Sindre Sorhus</a></p>
         <!-- Change this out with your name and url ↓ -->
         <p>Creado por <a href="https://github.com/OspinaJuan2000" target="_blank">Juan Ospina</a></p>
-        <p>Repositorio GitHub: <a href="#"><i class="fab fa-github"></i></a></p><a href="#">
+        <p>Repositorio GitHub: <a href="https://github.com/OspinaJuan2000/todo-list" target="_blank"><i
+                    class="fab fa-github"></i></a>
+        </p><a href="#">
     </footer>
 </body>
 
